vlib/v/checker/tests/array_prepend_type_mismatch_d.vv
fn main() {
	mut a := [1, 2]
	a.prepend(['aa', 'bb', 'cc'])
	println(a)
}
